--- a/main.css
+++ b/main.css
@@ -327,3 +327,22 @@ display: flex;
     border: 1px solid #ccc;
     color: #fff;
 }
+
+.main-btn {
+    color:#ffffff ;
+    background-color: #333;
+    text-decoration: none;
+    font-weight: 600;
+    display: inline-block;
+    padding: 10px 10px;
+    letter-spacing: 1px;
+    border-radius: 15px ;
+    margin-top: 40px;
+    margin-left: 50%;
+    transform: translate(-50%);
+    transition: 0.7s ease;
+    -webkit-transform: translate(-50%);
+    -moz-transform: translate(-50%);
+    -ms-transform: translate(-50%);
+    -o-transform: translate(-50%);
+}
